--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ classifiers =
 packages =
     camclient
     camclient.core
+    camcommon
     camserver
     camserver.core
 python_requires = >=3.6
