Added underscore as separators for the packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,16 +18,18 @@ classifiers =
 # These options can be changed according to your project
 [options]
 packages =
-    camclient
-    camclient.core
-    camcommon
-    camserver
-    camserver.core
+    cam_client
+    cam_client.core
+    cam_common
+    cam_server
+    cam_server.core
+    cam_server.database
 python_requires = >=3.6
 package_dir =
     =src
 zip_safe = no
 
 [options.package_data]
-camclient = py.typed
-camserver = py.typed
+cam_client = py.typed
+cam_common = py.typed
+cam_server = py.typed
