--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,8 @@ classifiers =
 # These options can be changed according to your project
 [options]
 packages =
-    cam_client
-    cam_client.core
+    cam_user
+    cam_user.core
     cam_common
     cam_server
     cam_server.core
@@ -30,6 +30,6 @@ package_dir =
 zip_safe = no
 
 [options.package_data]
-cam_client = py.typed
+cam_user = py.typed
 cam_common = py.typed
 cam_server = py.typed
