Added logs to the built packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,14 @@ classifiers =
 packages =
     cam_user
     cam_user.core
+    cam_user.logs
     cam_common
+    cam_client
+    cam_client.logs
     cam_server
     cam_server.core
     cam_server.database
+    cam_server.logs
 python_requires = >=3.6
 package_dir =
     =src
