--- a/setup.cfg
+++ b/setup.cfg
@@ -18,16 +18,17 @@ classifiers =
 # These options can be changed according to your project
 [options]
 packages =
-    cam_user
-    cam_user.core
-    cam_user.logs
     cam_common
     cam_client
+    cam_client.core
     cam_client.logs
     cam_server
     cam_server.core
     cam_server.database
     cam_server.logs
+    cam_user
+    cam_user.core
+    cam_user.logs
 python_requires = >=3.6
 package_dir =
     =src
