Changed the setup file

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,10 +18,10 @@ classifiers =
 # These options can be changed according to your project
 [options]
 packages =
-    cam_common
     cam_client
     cam_client.core
     cam_client.logs
+    cam_common
     cam_server
     cam_server.core
     cam_server.database
@@ -37,4 +37,6 @@ zip_safe = no
 [options.package_data]
 cam_user = py.typed
 cam_common = py.typed
-cam_server = py.typed
+cam_server =
+    py.typed
+    */user_db.json
